# Roadmap-Design-Skill

./: .env.example  .gitignore  BLUEPRINT.md  CHECKLISTS.md  EVALUATION.md  GUARDRAILS.md  HUB.codex.md  README.md  RUNBOOK.md  TASK.codex.md  pyproject.toml
artifacts/: request.failure.sample.json
docs/: HUB.codex.md
docs/evidence/: ai-agent-builder-brief-2026-03-14.md  test-evidence-2026-03-11.md
docs/project/: CHECKLISTS.md  EVALUATION.md  GUARDRAILS.md  RUNBOOK.md
docs/releases/: v0.1.0.md
docs/src/: interfaces.md  requirements.md  specification.md
docs/tasks/: TASK.codex.md  implementation-brushup-2026-03-14.md  requirements-alignment-03-13-2026.md
examples/: request.ai_agent_builder.json  request.from_insight_agent.json  request.full.json  request.japan_tour.json  request.minimal.json  response.ai_agent_builder.json  response.failure.json  response.success.json  validation.failure.json  validation.success.json
schemas/: error.schema.json  roadmap-request.schema.json  roadmap-response.schema.json  validation-result.schema.json
skills/roadmap-request-builder/: SKILL.md
src/roadmap_core/: __init__.py  schema_loader.py
src/roadmap_core/llm/: __init__.py  base.py  factory.py
src/roadmap_core/llm/providers/: __init__.py  alibaba_provider.py  local_provider.py  (+2 more)
src/roadmap_core/models/: __init__.py  error.py  request.py  response.py  validation.py
src/roadmap_core/planner/: __init__.py  llm_planner.py  prompts.py  roadmap_planner.py
src/roadmap_core/presenters/: __init__.py  json_presenter.py
src/roadmap_core/validators/: __init__.py  request_payload_validator.py  request_validator.py  schema_validator.py
src/wrappers/: __init__.py
src/wrappers/cli/: __init__.py  main.py
src/wrappers/http/: __init__.py  app.py
src/wrappers/mcp/: __init__.py  server.py
tests/: conftest.py
tests/contract/: test_schema_validation.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_http_validate.py  test_llm_planner.py  test_mcp.py  test_planner.py  test_validators.py
