[project]
name = "roadmap-design-skill"
version = "1.1.0"
description = "Transform ambiguous problems into implementation-ready roadmaps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.21.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]
http = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
llm = [
    "openai>=1.0.0",
]
all = [
    "roadmap-design-skill[dev,http,llm]",
]

[project.scripts]
roadmap = "wrappers.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roadmap_core", "src/wrappers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"